--- a/src/main/resources/css/default.css
+++ b/src/main/resources/css/default.css
@@ -63,7 +63,7 @@
     -fx-background-insets : 5.0 5.0 5.0 5.0;
     -fx-padding : 30pt; /* margin around the grid */
     -fx-spacing : 5pt;  /* spaces between child nodes */
-    -fx-alignment : center; /* Alignment of the child nodes within the grid. */
+    -fx-alignment : left; /* Alignment of the child nodes within the grid. */
 }
 
 .button-box {
@@ -71,7 +71,7 @@
     -fx-spacing : 10pt
 }
 
-.h1 { /* Should act similarly to HTML's H1 tag. */
+.h1 { /* For uses similar to HTML's H1 tag. */
     -fx-font-size : 17pt;
     -fx-fill : #fff9e6;   /* This would be the font color. No joking. */
     -fx-text-alignment : center;
@@ -80,13 +80,24 @@
 }
 
 
-.h2 { /* Ditto with HTML H2. */
+.h2 { /* For use similar to HTML's H2. */
     -fx-font-size : 14pt;
     -fx-fill : #1a0008;
     -fx-text-alignment : center;
     -fx-font-weight : normal;
 }
 
+.lighttext { /* Used for normal sized Text labels */
+    -fx-font-size : 12pt;
+    -fx-text-alignment : left;
+    -fx-fill : #fff9e6;   /* This would be the font color. No joking. */
+}
+
+.text { /* Used for normal sized Text labels */
+    -fx-font-size : 12pt;
+    -fx-text-alignment : left;
+    /* -fx-fill : #fff9e6;   This would be the font color. No joking. */
+}
 
 .output-area {
     -fx-fill : #8b008b;
