--- a/src/main/resources/css/default.css
+++ b/src/main/resources/css/default.css
@@ -23,9 +23,11 @@
  *
  * ******************************************************************************/
 
-.grid {
-    /* -fx-background-color : #fff2cc; */
-    -fx-background-image : url("dark-blue-background-portrait.jpg");
+/* This is the style for the topmost main screen. */
+
+.main-screen {
+    -fx-background-color : #11192c;
+    /* -fx-background-image : url("dark-blue-background-portrait.jpg"); */
 
     /* The following rules are meant for background images.
        Commented out since I don't need it for the current rule.
@@ -39,14 +41,17 @@
 
     -fx-background-radius : 5.0;
     -fx-background-insets : 5.0 5.0 5.0 5.0;
-    -fx-padding : 30pt; /* margin around the grid */
-    -fx-spacing : 5pt;  /* spaces between child nodes */
+    -fx-padding : 10pt; /* margin around the grid */
+    -fx-spacing : 15pt;  /* spaces between child nodes */
     -fx-alignment : center; /* Alignment of the child nodes within the grid. */
+    -fx-scale-shape : true;
 }
 
-.grid2 {
+/* Windows for the various subactivities which are run when
+   selected from the main window. */
+.activity-windows {
     /* -fx-background-color : #fff2cc; */
-    -fx-background-image : url("dark-blue-background-portrait.jpg");
+    -fx-background-image : url("dark-blue-background-portrait.png");
 
     /* The following rules are meant for background images.
        Commented out since I don't need it for the current rule.
@@ -66,14 +71,23 @@
     -fx-alignment : left; /* Alignment of the child nodes within the grid. */
 }
 
+.activity-selector-buttons {
+}
+
 .button-box {
     -fx-padding : 10pt;
     -fx-spacing : 10pt
 }
 
+/* These are for the top and bottom panels of the main layout */
+
+.top-bottom-panels {
+    -fx-alignment : center;
+}
+
 .h1 { /* For uses similar to HTML's H1 tag. */
     -fx-font-size : 17pt;
-    -fx-fill : #fff9e6;   /* This would be the font color. No joking. */
+    -fx-fill : #ed9692;   /* This would be the font color. No joking. */
     -fx-text-alignment : center;
     -fx-font-weight : normal;
     -fx-padding : 15pt;
