--- a/src/main/resources/ph/mmhsvictoria/apps/pressconfx/default.css
+++ b/src/main/resources/ph/mmhsvictoria/apps/pressconfx/default.css
@@ -26,8 +26,9 @@
 /* This is the style for the topmost main screen. */
 
 .main-screen {
-    -fx-background-color : #11192c;
-    /* -fx-background-image : url("dark-blue-background-portrait.jpg"); */
+    /* -fx-background-color : #11192c; */
+    -fx-background-image : url("blue-abstract.jpg");
+    -fx-background-repeat: repeat;   
 
     /* The following rules are meant for background images.
        Commented out since I don't need it for the current rule.
@@ -51,7 +52,7 @@
    selected from the main window. */
 .activity-windows {
     /* -fx-background-color : #fff2cc; */
-    -fx-background-image : url("dark-blue-background-portrait.png");
+    -fx-background-image : url("blue-abstract.jpg");
 
     /* The following rules are meant for background images.
        Commented out since I don't need it for the current rule.
@@ -68,7 +69,7 @@
     -fx-background-insets : 5.0 5.0 5.0 5.0;
     -fx-padding : 30pt; /* margin around the grid */
     -fx-spacing : 5pt;  /* spaces between child nodes */
-    -fx-alignment : left; /* Alignment of the child nodes within the grid. */
+    -fx-alignment : center-left; /* Alignment of the child nodes within the grid. */
 }
 
 .activity-selector-buttons {
